fix: add z-index to sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,6 +144,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   width: calc(100% - 1.5rem);
